# hsm4c

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  project.yml
.github/workflows/: build_linux.yml
lib/: CMakeLists.txt  hsm4c.c  hsm4c.h
src/: CMakeLists.txt  hsm4c_demo.c  hsm4c_test.c
test/: support_fns.h  test_execution_order.c  test_execution_order_1.c  test_hsm4c.c  test_hsm4c_statechart.puml
